# stream_recorder

./: .gitignore  CHANGELOG.md  CLEANUP_GUIDE.md  CLEANUP_SCRIPT_FIX.md  CLEANUP_SUMMARY.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  SCRIPT_FIX_APPLIED.md  UV_SETUP.md  UV_SETUP_COMPLETE.md  audio_recorder.py  cleanup_old_recordings.sh  cleanup_temp.py  config.py  debug_channels.html  gunicorn.conf.py  main.py  pyproject.toml  radio_channels.json.sample  recorder.sh  start_recording.py  stream-recorder-web.service  stream-recorder-web.service.template  test_audio.html  test_concat.html  test_concat.py  test_concat_direct.py  test_flac_playback.html  test_flask.py  test_flask_routes.py  test_modal_debug.html
archive/: DEV_CLEANUP_SUMMARY.md  SCRIPT_CLEANUP_SUMMARY.md  test_voice_detection.py
archive/dev_legacy/: test_modal.html  test_modal_debug.html  test_page.html  test_transmission_filter.py  test_voice_detection.py
archive/old_files/: audio_processor.py  audio_recorder_complex.py.old  cleanup_old_recordings.sh  radio_channels.json.backup  radio_channels.json.old  radio_channels.json.sample  (+5 more)
dev/: README.md  channel_health_monitor.py  debug_channels.html  debug_recording.py  quick_start.py  test_api.html  test_api.py  test_audio.html  test_audio_processing.py  test_channels.py  test_format.html  test_noise_gate.py  test_timestamp.py  test_voice_detection.py  test_volume_sensitivity.py
docs/: API.md  ARCHITECTURE.md  AUDIO_PROCESSING.md  AUTO_TUNER_INTEGRATION.md  CLEANUP_GUIDE.md  CONFIGURATION.md  DEVELOPER_TESTING.md  FLAC_SUPPORT_UPDATE.md  GUNICORN_SYSTEMD_SETUP.md  INSTALLATION.md  MP3_TO_FLAC_MIGRATION.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  RADIO_CHANNELS_CLEANUP.md  README.md  RECORDING_GUIDE.md  SIMPLIFICATION_SUMMARY.md  TEST_CONFIGURATION.md  UV_GUIDE.md  VAD_CONFIGURATION.md  VOLUME_SENSITIVITY_GUIDE.md
scripts/: README.md  clean-channels-config.py  cleanup_old_recordings.sh  cleanup_short_recordings.sh  cleanup_temp_files.sh  deploy-production.sh  install-systemd-service.sh  monitor_vad_performance.py  start-dev.sh  start-web.sh  start_recording.py  start_recording.sh  stop_recording.py  stop_recording.sh  validate_vad_config.py
static/: robots.txt
templates/: index.html
tests/: test_app.py
(+1 files in other folders)
