[project]
name = "stream-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "flask-testing>=0.8.1",
    "pytest>=8.4.1",
]
